--- a/forest_fire_severity_estimation.ini
+++ b/forest_fire_severity_estimation.ini
@@ -1,6 +1,8 @@
 [General]
-last_path=C:/Users/dhernand/Documents
+last_path=E:/dev/src/python/qgis3/forest_fire_severity_estimation/example/results
 prefire_inital_date=2016-06-01
-prefire_final_date=2016-06-30
-postfire_inital_date=2016-08-01
-postfire_final_date=2016-08-31
+prefire_final_date=2016-06-29
+postfire_inital_date=2016-07-06
+postfire_final_date=2016-08-05
+google_drive_path=gee_results
+output_file_name=ForestFireLietor2006SeverityDNBR
